# multi_robot_tracking

./: CMakeLists.txt  README.md  nodelet_plugin.xml  package.xml
config/: params_flightmare_sim.yaml  params_snapdragon_flight.yaml
include/multi_robot_tracking/: JpdafFilter.h  PhdFilter.h  SimpleKalman.h  detection.h  hungarian_alg.h  kalman.h  track.h  tracker_param.h
include/phd_tracker/: phd_tracker.h
launch/: demo.launch  demo_left.launch  demo_node.launch  demo_old.launch  demo_right.launch
matlab_simulation/: Asynch_fig8.csv  Asynch_fig8_v2.csv  GM_PHD_Construct_Update_Components.m  GM_PHD_Create_Birth.m  GM_PHD_Estimate.m  GM_PHD_Filter.m  GM_PHD_Initialisation.m  GM_PHD_Initialisation_drones.m  GM_PHD_Predict_Birth.m  GM_PHD_Predict_Existing.m  GM_PHD_Prune.m  GM_PHD_Prune_MHT.m  GM_PHD_Simulate_Initialise.m  GM_PHD_Simulate_Initialise_drones.m  GM_PHD_Simulate_Measurements.m  GM_PHD_Simulate_Measurements_drones.m  GM_PHD_Simulate_Plot.m  GM_PHD_Update.m  Synch_fig8.csv  Synch_fig8v2.csv  error_ellipse.m  plt_fig_eight.m  zGM_PHD_evaluation_plot.m
rviz/: darknet_vis.rviz
scripts/: flightmare_test.py  rmse_calc.py  sample_data.py
src/: SimpleKalman.cpp  hungarian_alg.cpp  jpdaf_filter.cpp  kalman.cpp  multi_robot_tracking_node.cpp  multi_robot_tracking_nodelet.cpp  phd_filter.cpp  phd_tracker.cpp  track.cpp
