<?xml version="1.0"?>
<package format="2">
  <name>multi_robot_tracking</name>
  <version>0.0.0</version>
  <description>The multi_robot_tracking package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="marklee@todo.todo">marklee</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>


  <depend>darknet_ros_msgs</depend>
  <depend>image_transport</depend>
  <depend>nav_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>geometry_msgs</depend>
  <depend>nodelet</depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>tf</depend>

  <export>
    <nodelet plugin="${prefix}/nodelet_plugin.xml"/>
  </export>

</package>
